# polymarket

./: .dockerignore  .env  .env.example  Makefile  README.md  docker-compose.yml
config/: markets.yaml  risk.yaml  settings.yaml  symbols.yaml
deployments/docker/: Dockerfile.api  Dockerfile.supervisor  Dockerfile.trader  README.md  nginx.conf
deployments/k8s/: README.md  api-deployment.yaml  configmap.yaml  namespace.yaml  redis.yaml  secret.example.yaml  supervisor-deployment.yaml  trader-deployment.yaml
docs/: architecture.md  risk-controls.md  runbook.md
frontend/websocket-dashboard/: package-lock.json  package.json
frontend/websocket-dashboard/src/app/: globals.css  layout.tsx  page.tsx
go-services/: go.mod
go-services/cmd/api/: main.go
go-services/cmd/backfill/: main.go
go-services/cmd/dry-run/: main.go
go-services/cmd/live-run/: main.go
go-services/cmd/supervisor/: main.go
go-services/internal/monitoring/: alerts.go  logger.go  metrics.go
go-services/internal/runner/: scheduler.go  service.go  service_test.go
go-services/internal/storage/: db.go  models.go  redis_cache.go  repositories.go
go-services/internal/transport/: kafka.go  nats.go
go-services/internal/utils/: decimals.go  retry.go  retry_test.go  time.go
rust-core/: Cargo.toml
rust-core/crates/adapters-binance/: Cargo.toml
rust-core/crates/adapters-binance/src/: client.rs  lib.rs  mapper.rs  ws.rs
rust-core/crates/adapters-polymarket/: Cargo.toml
rust-core/crates/adapters-polymarket/src/: client.rs  lib.rs  mapper.rs  ws.rs
rust-core/crates/common/src/: lib.rs
rust-core/crates/data-engine/: Cargo.toml
rust-core/crates/data-engine/src/: lib.rs  normalization.rs  orderbook.rs  prices.rs
rust-core/crates/execution-engine/: Cargo.toml
rust-core/crates/execution-engine/src/: lib.rs  order_manager.rs  router.rs  slippage.rs
rust-core/crates/portfolio-engine/: Cargo.toml
rust-core/crates/portfolio-engine/src/: daily.rs  lib.rs  pnl.rs  positions.rs
rust-core/crates/risk-engine/: Cargo.toml
rust-core/crates/risk-engine/src/: exposure.rs  kill_switch.rs  lib.rs  limits.rs
rust-core/crates/strategy-engine/: Cargo.toml
rust-core/crates/strategy-engine/src/: arbitrage.rs  fair_value.rs  lib.rs  signals.rs  signals_test.rs
rust-core/crates/trader/: Cargo.toml
rust-core/crates/trader/src/: main.rs
scripts/: dev.ps1  run_live.ps1  run_paper.ps1  test.ps1
tests/integration/: README.md
tests/paper/: README.md
tests/replay/: README.md
tests/unit/: README.md
(+12 files in other folders)
