[workspace]
members = [
  "crates/common",
  "crates/adapters-polymarket",
  "crates/adapters-binance",
  "crates/data-engine",
  "crates/strategy-engine",
  "crates/risk-engine",
  "crates/execution-engine",
  "crates/portfolio-engine",
  "crates/trader"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
