[package]
name = "adapters-polymarket"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
